Fix spacing in nav

--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,10 @@ header {
     height: 100px;
     width: auto;
     float: left;
-    margin-top: 20px;
+    margin: 20px auto;
     border-radius: 50px;
 }
-/* NAVIGATION STUFF */
+/* NAVIGATION STUFF*/
 .cat-nav {
     float: right;
     list-style: none;
